<resources>
    <string name="app_name">TAILWEBS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="ready_to_track">READY TO TRACK?</string>
    <string name="yes">YES</string>
    <string name="tracking_history">TRACKING HISTORY</string>
    <string name="track_view">Track View</string>
    <string name="_00_00">00:00</string>
    <string name="seconds">seconds</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="date">Date</string>
</resources>